# ConsoleHelpAI

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: AiClient.cpp  AiClient.h  ConsoleHook.cpp  ConsoleHook.cpp-baseline  ConsoleHook.h  ConsolePrinter.cpp  ConsolePrinter.h  PCH.h  Plugin.h  Settings.cpp  Settings.h  main.cpp
